# crm_inventory

./: .flake8  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
crm_inventory/: alembic.ini  app.py
crm_inventory/alembic/: env.py
crm_inventory/alembic/versions/: 0687dbdc4a78_create_inventory_and_item_tables.py  edd0869972af_create_inventories_and_items_table.py
crm_inventory/config/: config.py
crm_inventory/data/: inventory.py  requests.py  responses.py
crm_inventory/orm/: inventory.py  item.py
crm_inventory/repositories/: base.py  inventory_repository.py
crm_inventory/services/: inventory_service.py
crm_inventory/utils/: db.py
tests/: conftest.py  docker-compose.yml
tests/integration/: app_test.py  conftest.py  db_test.py
tests/integration/orm/: inventories_test.py  items_test.py
tests/integration/repositories/: inventory_repository_test.py
tests/unit/: app_test.py
tests/unit/data/: inventory_test.py
