[tool.poetry]
name = "crm-inventory"
version = "0.1.0"
description = "CRM inventory management microservice"
authors = ["Adam Bailey <ab67319@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
fastapi = "^0.110.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
