[tool.poetry]
name = "crm-inventory"
version = "0.1.0"
description = "CRM inventory management microservice"
authors = ["Adam Bailey <ab67319@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
pytest = "^8.1.1"
ipdb = "^0.13.13"
flake8 = "^7.0.0"
httpx = "^0.27.0"
sqlalchemy-utils = "^0.41.2"
isort = "^5.13.2"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
